--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@icttroacon/n8n-nodes-front-matter",
   "version": "0.1.0",
-  "description": "",
+  "description": "n8n nodes for front matter",
   "keywords": [
     "n8n-community-node-package"
   ],
@@ -19,10 +19,10 @@
   "scripts": {
     "build": "tsc && gulp build:icons",
     "dev": "tsc --watch",
-    "format": "prettier nodes credentials --write",
-    "lint": "eslint nodes credentials package.json",
-    "lintfix": "eslint nodes credentials package.json --fix",
-    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes credentials package.json"
+    "format": "prettier nodes --write",
+    "lint": "eslint nodes package.json",
+    "lintfix": "eslint nodes package.json --fix",
+    "prepublishOnly": "npm run build && npm run lint -c .eslintrc.prepublish.js nodes package.json"
   },
   "files": [
     "dist"
